# basedxl

./: .gitignore  README.md  pyproject.toml  sample.py
basedxl/: __init__.py  model.py  unet.py  utils.py
basedxl/modules/: attn.py  base_module.py  conv2d.py  groupnorm.py  lowp_linear.py
basedxl/triton/: cascaded_lowp_matmul.py
extras/: measure_cascaded_lowp_matmul_error.py
tests/: test_cascaded_lowp_matmul.py
